# mtp-filler

./: Cargo.toml  README.md  ascii-movie.cast  shell.nix
.github/workflows/: build-and-release.yml
src/: app.rs  backend.rs  cli.rs  generic.rs  gui.rs  lib.rs  main.rs  messages.rs  shared.rs  unix.rs  windows.rs
src/backend/: mod.rs  unix.rs  windows.rs
ui/: app-window.slint
